--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ body{
     font-family: 'Comic Neue';
 }
 
+
+
 /* nav bar */
 #nav-row{
     position: fixed;
@@ -18,12 +20,19 @@ body{
     align-items: center;
     height: 80px;
     width: 100%;
-    background-color: white;
-    
+    background-color: white;  
 }
 
 .nav-col{
     padding: 0 10px;
+    flex-grow: 1;
+    flex-shrink: 1;
+}
+
+.nav-col-dx ul{
+    display: flex;
+    justify-content: flex-end;
+
 }
 
 ul{
@@ -39,6 +48,7 @@ ul{
     text-decoration: none;
     margin: 0 20px;
 }
+
 
 /* header */
 .bg-color{
@@ -58,11 +68,11 @@ h1{
 }
 
 #header-col{
-  display: flex;
-  justify-content:center;
-  align-items: flex-start;
-  padding-top: 40px;
-  margin-left: 40px;
+    display: flex;
+    justify-content:center;
+    align-items: flex-start;
+    padding-top: 40px;
+    margin-left: 40px;
 }
 
 .header-col-sx{
@@ -99,170 +109,154 @@ button{
     background-color: #0061FE;
     padding: 10px;
     color: white;
+    font-size: 18px;
 }
 
 /* main */
 /* first section */
-.main-row{
-    margin: 80px auto 50px;
+
+.margin{
+    margin-top: 80px;
+}
+
+.medium-row{
+    margin: 0 auto;
     width: 70%;
+    /* debug */
+    border: 1px solid lightgray
 }
 
-input{
-    margin: 40px 0;  
+.input-margin{
+    margin: 30px 0;
+    display: inline-block;
+    margin-right: 30px;
 }
 
-.main-col{
+.row-display-sb{
     display: flex;
-    justify-content: center;
-    align-items: stretch;
-    flex-grow: 1;
+    justify-content: space-between;
+    align-content: stretch;
 }
 
-.main-col-content{
-    border: 1px solid lightgrey;
-    min-width: 30%;
+/* column style */
+.col-3{
+    flex-basis: 30%;
+    flex-shrink: 1;
+    /* debug */
+    border: 1px solid lightgray;
+    
+}
+
+
+/* icone */
+.icon{
+    padding: 10px 0;
+    text-align: center;
+    border: 1px solid lightgray;
+    font-size: 20px;
+}
+
+/* type of subscription */
+.padding-left{
+    padding: 0 20px;
+}
+
+.top-col{
+    /* border: 1px solid black; */
+}
+
+.type h3{
+    margin: 40px 0 20px 0 ;
+    font-size: 25px;
+
 }
 
 .price{
-    margin-bottom: 40px;
+    display: block;
+    margin-bottom:20px;
 }
 
-.col-cx{
-    margin: 0 40px;
-}
 
-.icons{
+/* container opzioni piano */
+.option-container{
     display: flex;
-    justify-content: center;
-    border: 1px solid lightgray;
-    padding: 5px;
-    margin-bottom: 30px;
+    /* border: 1px solid black; */
 }
 
-.icons .fa-user{
-    margin-right: 5px;
+.gap{
+    margin-top: 40px;
 }
 
-.margin-col{
-    margin: 0 20px;
-}
-
-.margin-col h3{
-    margin-bottom: 15px;
-}
-
-.margin-col h4{
-    margin: 20px 0;
-}
-
-.fa-check{
-    color: blue;
-}
 
 .features-icons{
-    display: flex;
-    margin: 15px 0;
+    margin-right: 10px;
+    margin-bottom: 40px ;
 }
 
-.features-text{
-    margin-left: 10px;
+.trial{
+    text-align: center;
+    margin-top: 30px;
 }
 
-.divider{
-    width: 50px;
-    border-top: 1px solid grey;
-    margin: 30px 0 0 ;
+/* trial button */
+.trial button{
+    width: 100%;
 }
 
 .buy{
     margin-top: 30px;
 }
 
-.trial{
-    width: 100%;
-    margin: 0 auto;
+/* bottom column */
+.divider{
+    border-top: 1px solid lightgray;
+    width: 50px;
+    margin: 50px 0;
 }
 
-.trial button{
-    width: 100%;
+.bottom-col{
+    /* height: 300px;
+    border: 1px solid black; */
 }
 
-/* sezione 2*/
-.title-container{
-    margin: 60px auto 40px ;
-    width: 70%;
+.bottom-col h3{
+    margin-bottom: 30px;
 }
 
-.title-container h2{
-    font-size: 35px;
+/* section 2 */
+
+.row-display-cx{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    border: 1px solid lightgray;
+    /* debug */
+    /* height: 300px; */
 }
 
-.grey-border{
+.icon{
     border: 1px solid lightgray;
 }
 
-.center{
-    text-align: center;
-    font-size: 30px;
-    padding: 10px 0;
-    border: 1px solid lightgrey;
+.col-2{
+    width: 50%;
+    
 }
 
-.col{
+.col-2-dx{
     display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    margin: 20px 20px;
-}
-
-.col .col-sx h2{
-    margin-bottom: 15px;
-}
-
-.col .col-sx h3{
-    margin-bottom: 40px;
-}
-
-/* section 3 */
-.row{
-    display: flex;
+    justify-content: flex-end;
     align-items: flex-start;
 }
 
-.column{ 
-    flex-grow: 1;
-    flex-shrink: 1;
+.col-2-sx{
+    padding: 30px 0 0 20px;
 }
 
-.column-img{
-    flex-basis: 50%;
+.col-2-dx{
+    padding: 30px 20px 0 0;
 }
 
-.column-img img{
-    width: 700px;
-}
-
-.column-text{
-    padding: 100px 60px;
-    flex-basis: 50%;
-}
-
-.column-text p{
-    margin: 20px 0 40px;
-}
-
-
-/* section 4 */
-.column-content:nth-of-type(2){
-    padding: 0 50px;
-}
-
-
-.column-content img{
-    width: 100%;
-}
-
-.column-content p{
-    margin-top: 30px;
+.col-2 h4{
+    margin: 20px 0 40px 0;
 }
