--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    font-family: 'Comic Neue';
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
 /* nav bar */
@@ -19,6 +19,11 @@ body{
     height: 80px;
     width: 100%;
     background-color: white;  
+}
+
+
+.drop-down{
+    display: none;
 }
 
 .nav-col{
@@ -40,6 +45,10 @@ ul{
 .nav-col ul{
     display: flex;
     align-items: center;
+}
+
+.nav-col button{
+    width: 100px;
 }
 
 .nav-col a {
@@ -155,7 +164,7 @@ button:hover{
 
 .medium-row{
     width: 100%;
-    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
 }
 
 .input-margin{
@@ -312,6 +321,8 @@ button:hover{
 
 .col-2-text button{
     color: black;
+    background-color: transparent;
+    border: 1px solid black;
 
 }
 
@@ -353,6 +364,7 @@ button:hover{
 
 .bg-col-text{
     background-color: #e3dfdf;
+    overflow-y: auto;
 }
 
 #container-col-text h2{
@@ -424,8 +436,6 @@ button:hover{
 }
 
 
-
-
 /* large row 2 */
 .large-row-col{
     display: flex;
@@ -462,7 +472,8 @@ button:hover{
 }
 
 .last.row{
-    width:100%
+    width:100%;
+    flex-wrap: wrap;
 }
 
 .question{
@@ -494,50 +505,55 @@ button:hover{
 /* footer */
 .footer-bg-color{
     background-color: black; 
+    color: lightgray;
 }
 
-#display{
-    display: flex;
-    justify-content: center;
+.footer-width{
+    padding-top: 100px;
+    width: 80%;
+    margin: 0 auto;
 }
+
 
 .footer-row{
-    padding: 100px 100px 0;
+    width: 100%;
+}
+
+
+.footer-col-container::after{
+    clear: both;
+    display: table;
+    content: '';
 }
 
 .footer-col{
-    flex-grow: 1;
-    color: white;                       
+    float: left;
+    width: calc((100% - 100px) / 5);
+    margin: 0 10px;
 }
 
-.footer-col li{
-    margin-top: 25px;
-}
-.footer-col li:first-child{
-    margin-top: 50px;
+.footer-col h2{
+    margin-bottom: 40px;
 }
 
 .footer-col a{
     text-decoration: none;
-    color: white;
+    color: lightgray;
+}
+
+.footer-col li{
+    margin-bottom: 20px;
 }
 
 .footer-divider{
-    display: block;
     width: 100px;
-    border-top: 1px solid lightgrey;
-    padding: 30px 0;
+    border-top: 1px solid lightgray;
+    margin: 80px 0 50px 10px;
 }
 
 .footer-icon{
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    color: grey;
-    padding-bottom: 50px;
+    padding-bottom: 40px;
+    margin-left: 10px;
 }
 
-.footer-icon span{
-    margin: 0 6px;
-}
 
