--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,19 @@
     box-sizing: border-box;
 }
 
+.pt-40 {
+    padding-top: 40px;
+}
+
+.pt-150 {
+    padding-top: 150px;
+}
+
+.mb-mt-30{
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
 body{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
@@ -21,16 +34,11 @@ body{
     background-color: white;  
 }
 
-
-.drop-down{
-    display: none;
-}
-
 .nav-col{
     padding: 0 10px;
     flex-grow: 1;
     flex-shrink: 1;
-    min-width: 600px;
+    min-width: 550px;
 }
 
 .nav-col-dx ul{
@@ -60,79 +68,52 @@ ul{
 
 /* header */
 
-header{
-    width: calc(100vh -80px);
-}
-
-.center-header {
-    height: 200px;
-    border: 1px solid;
-}
-.bg-color{
-    background-color: rgb(190, 190, 235);
-}
-
 #header-row{
-    padding-top: 60px;
-    width: 100%;
-    /* margin: 0 auto; */
-}
-
-h1{
-    text-align: center;
-    padding: 100px 0 20px 0;
-    font-size: 50px;
-}
-
-h2{
-    font-size: 30px;
-}
-
-#header-col{
-    width: 100%;
     display: flex;
-    justify-content:center;
-    align-items: flex-start;
-    padding-top: 40px;
 }
 
-.header-col-sx{
-    padding-top: 100px;
-    width: 30%;
-    font-size: 20px;
+.section-container {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 75rem;
+    min-width: 50rem;
 }
 
-.header-col-dx{
-    width: 50%;
-    min-width: 600px;
+#paragrafo-header{
+    font-size: 14px;
+    margin-bottom: 15px;
 }
 
-.header-col-dx img{
-    width: 100%;
-    padding-top: 100px;
-}
-
-.header-col-sx button {
-    margin: 100px 0;    
-}
-
-.header-col-sx{
-    min-width: 600px;
-}
-
-.header-col-sx span{
-    display: block;
-    margin: 40px 0;
-}
-
-.fa-arrow-down:hover{
+.section-container h1{
     font-size: 50px;
+}
+
+#col-sx{
+    width: 35%;
+}
+
+#col-dx{
+    width: 65%
+}
+
+#col-dx img{
+    max-width: 700px;
 }
 
 .fa-arrow-down{
+    display: block;
     font-size: 40px;
-    padding-top: 50px;
+    margin-top: 50px;
+
+}
+
+#col-sx a{
+    text-decoration: none;
     color: black;
+}
+
+#col-sx span{
+    display: block;
 }
 
 button{
@@ -346,6 +327,7 @@ button:hover{
     margin: 30px 0;
 }
 
+
 /* section 6 */
 .large-row{
     border: 1px solid black;
@@ -355,6 +337,7 @@ button:hover{
 .large-row-gap{
     margin-top: 150px;
 }
+
 .container-col{
     width: calc(100% / 3);
     height: calc(100vw / 3);
@@ -371,6 +354,17 @@ button:hover{
     font-size: 60px;
 }
 
+.title-header{
+    position: relative;
+}
+
+.title-header span{
+    position: absolute;
+    top: 10px;
+    left: 230px;
+    font-size: 20px;
+}
+
 .container-col-text-divider{
     width: 100px;
     border-top: 1px solid black;
@@ -380,6 +374,10 @@ button:hover{
 #container-col-text{
     font-size: 100%;
     padding: 40px 40px;
+}
+
+#container-col-text p{
+    margin: 50px 0;
 }
 
 .row-col-4{
