--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,59 @@
     box-sizing: border-box;
 }
 
+body{
+    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+}
+
+
+.border{
+    border: 1px solid lightgray;
+}
+
+.row{
+    display: flex;
+    justify-content: space-between;
+}
+.wrap{
+    flex-wrap: wrap;
+}
+
+.fs-40{
+    font-size: 40px;
+}
+
+.section-margin{
+    margin-top: 100px;
+}
+
+.section-margin-large{
+    margin-top: 150px;
+}
+
+.sub-section-margin{
+    margin-top: 50px;
+}
+
+.pt-pb-90{
+    padding: 90px 0;
+}
+
+.pt-pl-20{
+    padding-top: 20px;
+    padding-left: 20px;
+}
+
+.pt-pr-20{
+    padding-top: 20px;
+    padding-right: 20px;
+}
+
 .pt-40 {
     padding-top: 40px;
+}
+
+.pt-70{
+    padding-top: 70px;
 }
 
 .pt-150 {
@@ -14,12 +65,57 @@
 }
 
 .mb-mt-30{
-    margin-bottom: 30px;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
-body{
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
+.mb-mt-50{
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.mt-10{
+    margin-top: 10px;
+}
+
+.mr-10{
+    margin-right: 10px;
+}
+
+.mb-20{
+    margin-bottom: 20px;
+}
+
+.mb-30{
+    margin-bottom: 30px
+}
+
+.mb-40{
+    margin-bottom: 40px;
+}
+
+.block{
+    display: block;
+}
+
+.col-3 hr{
+    width: 50px;
+}
+
+button{
+    padding: 10px;
+    border: none;
+    background-color: #0061FE;
+    color: white;
+    font-size: 15px;
+}
+
+button:hover{
+    cursor: pointer;
+}
+
+.fa-check{
+    color: blue;
 }
 
 /* nav bar */
@@ -36,9 +132,8 @@ body{
 
 .nav-col{
     padding: 0 10px;
-    flex-grow: 1;
-    flex-shrink: 1;
-    min-width: 550px;
+    max-width: 50rem;
+    min-width: 40rem;
 }
 
 .nav-col-dx ul{
@@ -56,7 +151,7 @@ ul{
 }
 
 .nav-col button{
-    width: 100px;
+  width: 80%;
 }
 
 .nav-col a {
@@ -68,11 +163,15 @@ ul{
 
 /* header */
 
+.bg-color{
+    background-color: rgb(190, 190, 235);
+}
+
 #header-row{
     display: flex;
 }
 
-.section-container {
+.header-section-container {
     margin-left: auto;
     margin-right: auto;
     max-width: 75rem;
@@ -84,7 +183,7 @@ ul{
     margin-bottom: 15px;
 }
 
-.section-container h1{
+.header-section-container h1{
     font-size: 50px;
 }
 
@@ -116,221 +215,100 @@ ul{
     display: block;
 }
 
-button{
-    background-color: #0061FE;
-    padding: 10px;
-    color: white;
-    font-size: 18px;
-    border: none;
-}
-
-button:hover{
-    cursor: pointer;
-}
 
 /* main */
-/* first section */
-.center{
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.margin{
-    margin-top: 80px;
-    width: 70%;
-}
-
-.medium-row{
-    width: 100%;
-    flex-wrap: wrap;
+.main-section-container{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 60rem;
+    min-width: 60rem;
 }
 
 .input-margin{
-    margin: 30px 0;
     display: inline-block;
-    margin-right: 30px;
 }
 
-.row-display-sb{
-    display: flex;
-    justify-content: space-between;
-    align-content: stretch;
-}
-
-/* column style */
 .col-3{
-    min-width: 300px;
-    flex-basis: 30%;
-    flex-shrink: 1;  
+    max-width: 18rem;
+    min-width: 18rem;
 }
 
-.border{
-    border: 1px solid lightgray;
+.icons-container{
+    display: flex;
 }
 
-/* icone */
+.icons{
+    margin-right: 10px;
+}
+
 .icon{
-    padding: 10px 0;
     text-align: center;
+    padding: 10px;
     border: 1px solid lightgray;
-    font-size: 20px;
+
 }
 
-/* type of subscription */
-.padding-left{
-    padding: 0 30px;
+.centralized-col{
+    width: 90%;
+    margin: 0 auto;
 }
 
-.type h3{
-    margin: 40px 0 20px 0 ;
-    font-size: 25px;
-}
-
-.price{
-    display: block;
+.col-3 li{
+    margin-top: 20px;
     margin-bottom: 20px;
 }
 
-
-/* container opzioni piano */
-.option-container{
-    display: flex;
-}
-
-.gap{
-    margin-top: 40px;
-}
-
-
-.features-icons{
-    margin-right: 10px;
-    margin-bottom: 40px ;
-}
-
-.fa-check{
-    color: blue;
-}
-/* trial */
-.trial button{
+.col-3 button{
     width: 100%;
 }
 
-.trial{
-    text-align: center;
-    margin-top: 30px;
-}
+/* sub section 2 */
 
-.buy{
-    margin-top: 30px;
-}
-
-/* bottom column */
-.divider{
-    border-top: 1px solid lightgray;
-    width: 50px;
-    margin: 50px 0;
-}
-
-
-.bottom-col h3{
-    margin-bottom: 30px;
-}
-
-/* section 2 */
-
-.row-display-cx{
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-.row-display-cx{
-    margin-bottom: 100px;
-}
-
-.icon{
-    border: 1px solid lightgray;
-}
 
 .col-2{
-    min-width: 400px;
-    flex-basis: 50%;
-}
-
-.col-2-dx{
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-start;
-    padding: 30px 40px 0 0;
-}
-
-.col-2-sx{
-    padding: 30px 40px 20px;
+    min-width: 28rem;
+    max-width: 28rem;
+    position: relative;
 }
 
 
-.col-2 h4{
-    margin: 20px 0 40px 0;
+.col-2 button{
+    position: absolute;
+    top: 20px;
+    right: 20px;
 }
 
-/* sezione 3 */
-
-
+/* sub section 3 */
 .col-2-img{
-    flex-basis: 50%;
-    min-width: 500px;
+    width: 70%;
 }
 
-.col-2 img{
-    width: 100%;
+.col-2-img img{
+    max-width: 600px;
 }
 
 .col-2-text{
-    flex-basis: 40%;
-    padding: 100px 50px 0 0;
-    margin-left: 50px;
-    min-width: 300px;
-}
-
-
-.col-2-text p{
-    margin: 20px 0 30px 0;
+    padding-right: 20px;
+    width: 30%;
 }
 
 .col-2-text button{
     color: black;
     background-color: transparent;
     border: 1px solid black;
-
+    width: 60%;
 }
 
-/* section 4 */
+/* sub section 4 */
 
-.row-display-sb h3{
-    padding-top: 20px;
-}
 .col-3 img{
-    width: 100%;
-    min-width: 300px;
-}
-
-.col-3 p{
-    margin-top: 30px;
-}
-
-/* section 5 */
-.medium-row a{
-    display: inline-block;
-    margin: 30px 0;
+    max-width: 250px;
+    min-width: 200px;
 }
 
 
-/* section 6 */
+/* sub section 5 */
 .large-row{
-    border: 1px solid black;
     display: flex;
 }
 
@@ -339,8 +317,9 @@ button:hover{
 }
 
 .container-col{
-    width: calc(100% / 3);
-    height: calc(100vw / 3);
+    max-width: 40rem;
+    min-width: 25rem;
+    min-height: 30rem; 
     display: flex;
     
 }
@@ -434,71 +413,24 @@ button:hover{
 }
 
 
-/* large row 2 */
-.large-row-col{
-    display: flex;
-    justify-content: space-around;
-    width: 70%;
-    margin: 0 auto;
-}
-
-.bg-color{
-    background-color: rgb(190, 190, 235);
-}
-
-.large-col{
-    padding: 150px 0;
-}
-
-.large-col h2{
-    padding-right: 100px;
-}
-
-.large-col button{
-    background-color: rgb(201, 214, 214) ;
+/* sub section 6 */ 
+.button-color{
+    background-color: lightblue;
     color: black;
-    width: 300px;
+    width: 60%;
 }
 
-
-/* last row */
-.last-container{
-    margin: 0 auto;
-    width: 70%;
-    height: 400px;
-    margin-bottom: 100px;
-}
-
-.last.row{
-    width:100%;
-    flex-wrap: wrap;
-}
+/* sub section 7 */
 
 .question{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
+    position: relative;
 }
 
-.last-row h2{
-    padding: 80px 0 40px 0;
-
+.fa-chevron-down{
+    position: absolute;
+    top: 0;
+    right: 0;
 }
-
-.last-row h3{
-    padding: 30px 0;
-}
-
-.answer{
-    display: none;
-}
-
-.question:hover + .answer{
-    display: block;
-}
-
-
 
 /* footer */
 .footer-bg-color{
@@ -506,52 +438,35 @@ button:hover{
     color: lightgray;
 }
 
-.footer-width{
-    padding-top: 100px;
-    width: 80%;
-    margin: 0 auto;
-}
-
-
-.footer-row{
-    width: 100%;
-}
-
-
-.footer-col-container::after{
-    clear: both;
-    display: table;
-    content: '';
-}
-
-.footer-col{
-    float: left;
-    width: calc((100% - 100px) / 5);
-    margin: 0 10px;
-}
-
-.footer-col h2{
-    margin-bottom: 40px;
-}
-
-.footer-col a{
-    text-decoration: none;
-    color: lightgray;
-}
-
-.footer-col li{
+.mb-10{
     margin-bottom: 20px;
 }
 
-.footer-divider{
-    width: 100px;
-    border-top: 1px solid lightgray;
-    margin: 80px 0 50px 10px;
+.footer-section-container{
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 80rem;
+    min-width: 80rem;
 }
 
+.col-5{
+    max-width: 20rem;
+    min-width: 16rem;
+}
+
+.col-5 a{
+    color: white;
+    text-decoration: none;
+}
+
+
 .footer-icon{
-    padding-bottom: 40px;
-    margin-left: 10px;
+    padding-bottom: 60px;
+}
+
+.mt-mb{
+    margin: 60px 0 40px 0;
+    width: 90px;
 }
 
 
