--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body{
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
 }
 
-
+/* classi ripetute */
 .border{
     border: 1px solid lightgray;
 }
@@ -18,6 +18,7 @@ body{
     display: flex;
     justify-content: space-between;
 }
+
 .wrap{
     flex-wrap: wrap;
 }
