--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -31,6 +31,10 @@ body{
     margin-top: 100px;
 }
 
+.first-section-margin-large{
+    margin-top: 200px;
+}
+
 .section-margin-large{
     margin-top: 150px;
 }
@@ -38,6 +42,7 @@ body{
 .sub-section-margin{
     margin-top: 50px;
 }
+
 
 .pt-pb-90{
     padding: 90px 0;
@@ -62,7 +67,7 @@ body{
 }
 
 .pt-150 {
-    padding-top: 150px;
+    padding-top: 200px;
 }
 
 .mb-mt-30{
@@ -85,6 +90,10 @@ body{
     margin-top: 10px;
 }
 
+.mt-200{
+    margin-top: 200px;
+}
+
 .mr-10{
     margin-right: 10px;
 }
@@ -100,6 +109,7 @@ body{
 .mb-40{
     margin-bottom: 40px;
 }
+
 
 .block{
     display: block;
@@ -176,6 +186,8 @@ ul{
 
 #header-row{
     display: flex;
+    position: relative;
+    min-height: 50vh;
 }
 
 .header-section-container {
@@ -199,17 +211,27 @@ ul{
 }
 
 #col-dx{
-    width: 65%
+    width: 65%;
+
 }
 
 #col-dx img{
-    max-width: 700px;
+    max-width: 900px;
+    position: absolute;
+    
 }
 
 .fa-arrow-down{
     display: block;
     font-size: 40px;
     margin-top: 50px;
+    position: absolute;
+    bottom: 10px;
+    left: 0;
+}
+
+.fa-arrow-down:hover{
+    font-size: 50px;
 
 }
 
